--- a/src/App.module.css
+++ b/src/App.module.css
@@ -13,11 +13,6 @@
   padding: 24px;
 }
 
-.mainTitle {
-  font-size: 24px;
-  font-weight: 500;
-  color: #323338;
+.header {
   margin-bottom: 24px;
-  padding-bottom: 16px;
-  border-bottom: 1px solid #e1e1e1;
 }
